--- a/package.json
+++ b/package.json
@@ -17,7 +17,18 @@
   },
   "homepage": "https://github.com/peng-guangchuan/Webpack-study-code#readme",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "add-asset-html-webpack-plugin": "^3.1.3",
+    "babel": "^6.23.0",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -28,10 +39,19 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "thread-loader": "^2.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "workbox-webpack-plugin": "^5.0.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.4"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   },
   "browserslist": {
     "development": [
@@ -43,6 +63,15 @@
       ">0.01%",
       "not dead",
       "not op_mini all"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "env": {
+      "browser": true
+    },
+    "sideEffects": [
+      "*.css"
     ]
   }
 }
