--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/peng-guangchuan/Webpack-study-code#readme",
   "devDependencies": {
+    "@babel/compat-data": "^7.8.0",
     "@babel/core": "^7.8.4",
     "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "babel": "^6.23.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
@@ -48,7 +49,7 @@
     "workbox-webpack-plugin": "^5.0.0"
   },
   "resolutions": {
-    "@babel/preset-env": "^7.8.4"
+    "@babel/preset-env": "^7.8.0"
   },
   "dependencies": {
     "jquery": "^3.4.1"
